<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="options">Options</string>
    <string name="quit">Quit</string>
    <string name="app_name">Spydroid</string>
    <string name="description">Capture live video and audio streaming from your smartphone with Spydroid</string>
    <string name="line1">In chrome or firefox type</string>
    <string name="line2">In VLC open</string>
    <string name="options_activity_title">Settings</string>
    <string name="warning">Turn on wifi or tethering !</string>
    <string name="streaming">Streaming !</string>
    <string name="bitrate">0 kbps</string>
    <string name="notification_title">Spydroid</string>
    <string name="notification_content">Beware ! Spydroid is running ;)</string>
    <string name="preview">Start a stream to enable the preview !</string>
    <string name="about0">Spydroid is a fun and open source application !</string>
    <string name="about1">If you don\'t understand how to use it, the google page of the project contains a FAQ. For example, you will find explanations on how to play the stream in VLC</string>
    <string name="about2">Don\'t forget to rate the app, it\'s really important, your life depends on it !</string>
    <string name="about3">You might also like it on facebook, why not ? Come on, like it ! It will be our little secret</string>
    <string name="about4">Have Fun !</string>
    <string name="about5">Help me to translate Spydroid in other languages ! If you are willing to help me in this crazy quest, send me a mail :)</string>
    <string name="settings0">The current resolution is</string>
    <string name="settings1">The current framerate is</string>
    <string name="settings2">The current bitrate is</string>
    <string name="settings3">Sound streaming</string>
    <string name="settings4">Enable/Disable audio streaming</string>
    <string name="settings5">Audio encoder</string>
    <string name="settings6">AAC requires at least ICS</string>
    <string name="settings7">Video streaming</string>
    <string name="settings8">Enable/Disable video streaming</string>
    <string name="settings9">Video encoder</string>
    <string name="settings10">Two video compression algorithms are available: H.263 and H.264</string>
    <string name="settings11">Resolution</string>
    <string name="settings12">Framerate</string>
    <string name="settings13">Bitrate</string>
    <string name="settings14">More options</string>
    <string name="settings15">Notification</string>
    <string name="settings16">Enable/Disable the notification</string>
    <string name="settings19">HTTP server</string>
    <string name="settings20">HTTP server port</string>
    <string name="settings21">Port used by the HTTP server</string>
    <string name="settings22">Enabled</string>
    <string name="settings23">Enable/Disable the HTTP server. Leave it on if you don\'t know what you are doing !</string>
    <string name="settings24">Use HTTPS</string>
    <string name="settings25">NOT STABLE YET !</string>
    <string name="settings26">HTTPS server port</string>
    <string name="settings27">Port used by the HTTPS server</string>
    <string name="settings28">RTSP server</string>
    <string name="settings29">Enabled</string>
    <string name="settings30">Useful to use Spydroid directly with VLC</string>    
    <string name="settings31">RTSP server port</string>
    <string name="settings32">Port used by the RTSP server</string>    
    <string name="bind_failed">You need to choose another port for the %s server !</string>
    <string name="port_used">Port already in use !</string>    
    <string name="page0">Main</string>
    <string name="page1">Preview</string>
    <string name="page2">About</string>
    
</resources>
