<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    tools:ignore="HardcodedText">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/about0"
            android:textColor="@android:color/white"
            android:textSize="19sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="51dp"
                android:layout_height="51dp"
                android:paddingStart="20dp"
                android:paddingTop="20dp"
                android:src="@drawable/check"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/about1"
                android:textSize="17sp" />

        </LinearLayout>

        <Button
            android:id="@+id/visit"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Visit !"
            tools:ignore="HardcodedText" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="51dp"
                android:layout_height="51dp"
                android:paddingStart="20dp"
                android:paddingTop="20dp"
                android:src="@drawable/check" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/about2"
                android:textSize="17sp" />

        </LinearLayout>

        <Button
            android:id="@+id/rate"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Rate the app !" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="51dp"
                android:layout_height="51dp"
                android:paddingStart="20dp"
                android:paddingTop="20dp"
                android:src="@drawable/check" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/about3"
                android:textSize="17sp" />

        </LinearLayout>

        <Button
            android:id="@+id/like"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Like it !" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="51dp"
                android:layout_height="51dp"
                android:paddingLeft="20dp"
                android:paddingTop="20dp"
                android:src="@drawable/check" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/about5"
                android:textSize="17sp" />

        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/about4"
            android:textColor="@android:color/white"
            android:textSize="19sp" />

    </LinearLayout>
</ScrollView>